Added support for SPOJ and UVa Online Judge. Also got rid of some nasty bugs:  * Class names can now contain the letter "B"  * Reset inputs every time before repeating execution when benchmarking  * Made Main.java a bit more readable by using a Map to use the appropriate PlatformHandler  * Some more things I probably forgot